crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_groupusepositions.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "Foo",
                  "Bar",
                  "Baz"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 10,
                  "end": 22
                }
              },
              "alias": null,
              "span": {
                "start": 19,
                "end": 22
              }
            }
          ]
        }
      },
      "span": {
        "start": 6,
        "end": 24
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 24
  }
}
