crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_invalidname_2.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "B"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 10,
                  "end": 12
                }
              },
              "alias": null,
              "span": {
                "start": 10,
                "end": 15
              }
            }
          ]
        }
      },
      "span": {
        "start": 6,
        "end": 15
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "parent"
          },
          "span": {
            "start": 15,
            "end": 21
          }
        }
      },
      "span": {
        "start": 15,
        "end": 22
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 22
  }
}
