crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_name.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "A"
          },
          "span": {
            "start": 7,
            "end": 8
          }
        }
      },
      "span": {
        "start": 7,
        "end": 10
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "A\\B"
          },
          "span": {
            "start": 10,
            "end": 13
          }
        }
      },
      "span": {
        "start": 10,
        "end": 15
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "\\A\\B"
          },
          "span": {
            "start": 15,
            "end": 19
          }
        }
      },
      "span": {
        "start": 15,
        "end": 21
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "namespace\\A\\B"
          },
          "span": {
            "start": 21,
            "end": 34
          }
        }
      },
      "span": {
        "start": 21,
        "end": 35
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 35
  }
}
