crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_nested.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "A"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 16,
              "end": 18
            }
          },
          "body": {
            "Braced": [
              {
                "kind": {
                  "Namespace": {
                    "name": {
                      "parts": [
                        "B"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 34,
                        "end": 36
                      }
                    },
                    "body": {
                      "Braced": []
                    }
                  }
                },
                "span": {
                  "start": 24,
                  "end": 44
                }
              }
            ]
          }
        }
      },
      "span": {
        "start": 6,
        "end": 46
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 46
  }
}
